<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".resultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0A0D22">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="387dp"
            android:layout_height="53dp"
            android:text="@string/your_result"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="278dp"
            android:layout_height="281dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition"
                android:textColor="#5ADC65"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_bmi"
                android:textColor="@android:color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_bmi_range"
                android:textColor="#8D8E99"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009605"
                android:text="@string/normal_bmi"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/your_age"
                android:textColor="#fe0e49"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_value"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/category"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/recalculate"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/recalculate"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:backgroundTint="#FE0049"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.087" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>